# docs/swagger.json
@@ -6,76 +6,8 @@
         "contact": {}
     },
     "paths": {
-        "/cotizacion": {
-            "get": {
-                "description": "Segun una moneda, una fecha de inicio y fin, y una cantidad, nos retorna las cotizaciones",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Moneda"
-                ],
-                "summary": "Retorna las cotizaciones de una moneda",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "El ID de la moneda que queremos",
-                        "name": "moneda_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Fecha desde la cual quiero obtener cotizaciones",
-                        "name": "fecha_inicial",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Fecha hasta la cual quiero obtener cotizaciones",
-                        "name": "fecha_final",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Desde que elemento quiero obtener resutados",
-                        "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Cantidad de resultados que quiero",
-                        "name": "cant",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.Cotizacion"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/cotizaciones": {
             "get": {
-                "description": "Podemos filtar segun nombre de moneda, fecha, y cantidad de registros.",
                 "consumes": [
                     "application/json"
                 ],
@@ -107,9 +39,15 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "El tamaño de las paginas, como maximo es 100, el default es 50",
                         "name": "tam_paginas",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pagina a partir de la cual sera retornado el query",
+                        "name": "pagina_inicial",
                         "in": "query"
                     },
                     {
@@ -117,6 +55,63 @@
                         "description": "La cantidad de paginas, como maximo es 10, el default es 1",
                         "name": "cant_paginas",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "El orden en el cual se devuelven las cotizaciones, el default es por fecha",
+                        "name": "orden",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Indica si es ascendente o descendente, el default es desdencente",
+                        "name": "orden_direccion",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Para incluir resumen",
+                        "name": "resumen",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Moneda"
+                ],
+                "summary": "Llama para que se haga la cotizacion de las monedas",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token de autorización",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -169,27 +164,53 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Si tenemos las credenciales podemos dar de alta una moneda",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Moneda"
+                ],
+                "summary": "Da de alta una moneda",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token de autorización",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nombre de la moneda nueva",
+                        "name": "nombre",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "domain.Cotizacion": {
-            "type": "object",
-            "properties": {
-                "criptomoneda": {
-                    "$ref": "#/definitions/domain.Criptomoneda"
-                },
-                "fecha": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "valor": {
-                    "type": "number"
-                }
-            }
-        },
         "domain.Criptomoneda": {
             "type": "object",
             "properties": {
